vbnc/vbnc/tests/Errors/30311-27.vb
Imports System
Class T
    Const M_String As int16 = #1/1/2008#
End Class